--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
 	display: flex;
 	align-items: center;
-	height: 94vh;
+	height: 100vh;
 	padding: 0;
 	margin: 0;
 	flex-wrap: wrap;
@@ -17,7 +17,6 @@ body {
 .container {
 	margin: 0 auto;
 	height: 100%;
-	padding: 3vh;
 	display: flex;
 	align-items: center;
 	align-content: space-between;
@@ -37,6 +36,7 @@ body {
 
 .heading {
 	width: 100%;
+	margin-top: 3vw;
 }
 
 h1, h2 {
@@ -59,10 +59,16 @@ h1 a {
 }
 
 h2 {
-	font-size: 1.2rem;
+	font-size: 0.8rem;
 	font-weight: 300;
 	color: #727283;
 	letter-spacing: 0.02rem;
+}
+
+@media screen and (min-width: 650px) {
+	h2 {
+		font-size: 1.2rem;
+	}
 }
 
 .output-row {
@@ -76,7 +82,7 @@ h2 {
 }
 
 #output {
-	font-size: 2rem;
+	font-size: 1.6rem;
 	width: fit-content;
 	font-weight: 600;
 	opacity: 1;
@@ -121,7 +127,7 @@ h2 {
 
 #regen {
 	background-color: yellow;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	font-weight: 600;
 	padding: 10px 25px;
 	border-radius: 2px;
@@ -132,13 +138,26 @@ h2 {
 }
 
 #regen:hover {
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 #regen:active {
-	top: 10px;
 	background-color: black;
 	color: yellow;
+}
+
+@media screen and (min-width: 650px) {
+	#regen {
+		font-size: 1.2rem;
+	}
+	
+	#regen:hover {
+		transform: scale(1.2);
+	}
+	
+	#regen:active {
+		top: 10px;
+	}
 }
 
 .emoji {
@@ -239,9 +258,17 @@ h2 {
 	text-align: center;
 	width: 100%;
 	font-weight: 300;
-	font-size: 0.9rem;
+	font-size: 0.8rem;
 	letter-spacing: 0.03rem;
 	color: grey;
+	margin-top: 3vw;
+	margin-bottom: 3vw;
+}
+
+@media screen and (min-width: 650px) {
+	.footer {
+		font-size: 0.9rem;
+	}
 }
 
 .footer a {
